--- a/src/components/cart-game/cart-game.css
+++ b/src/components/cart-game/cart-game.css
@@ -15,3 +15,10 @@
     margin-left: 5px;
     cursor: pointer;
 }
+.cart-game__image{
+    height: 70px;
+    width: 20%;
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+}
