--- a/src/pages/order/order.css
+++ b/src/pages/order/order.css
@@ -2,6 +2,10 @@
     display: flex;
     justify-content: space-between;
 }
+.order-title{
+    text-align: center;
+
+}
 
 .order-page__left {
     width: 70%;
