--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,5 +1,5 @@
 .btn{
-    border-radius: 15px;
+    border-radius: 10px;
     color: white;
     border: none;
     padding: 5px;
@@ -7,11 +7,15 @@
 }
 
 .btn--primary {
-    background-color: rgb(85, 88, 237);
+    background-color: #7B80ED;
+}
+.btn--primary:hover{
+    background-color: #9FA2ed;
+
 }
 
 .btn--secondary {
-    background-color: rgb(80, 82, 84);
+    background-color: #70817E;
 }
 
 .btn--small {
