--- a/src/components/game-items/GameItems.css
+++ b/src/components/game-items/GameItems.css
@@ -1,18 +1,18 @@
 .game-item {
     text-decoration: none;
-    color: white;
+    color:#70817E;
     width: 320px;
     height: 300px;
-    background-color: rgb(36, 37, 41);
+    background-color: #D7DEff;
     border-radius: 15px;
+   -webkit-box-shadow: 2px 4px 20px 9px rgba(38, 40, 41, 0.2);
+    -moz-box-shadow: 2px 4px 20px 9px rgba(38, 40, 41, 0.2);
+    box-shadow: 2px 4px 20px 9px rgba(38, 40, 41, 0.2);
     cursor: pointer;
     position: relative;
 }
 
-.game-item:not(:last-child) {
-    margin-bottom: 30px;
-    margin-right: 50px;
-}
+
 
 .game-item__title {
     font-size: 18px;
@@ -36,6 +36,6 @@
 
 .game-item__buy {
     position: absolute;
-    right: 0;
-    bottom: -12px;
+    right: 8px;
+    bottom: 12px;
 }
