--- a/src/components/genre/genre.css
+++ b/src/components/genre/genre.css
@@ -1,8 +1,8 @@
 .game-genre {
-    background-color: rgb(80, 82, 84);
+    background-color: #B2C1CB;
     padding: 2px 5px;
     font-size: 13px;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 .game-genre:not(:last-child) {
