--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(25, 26, 28);
+  background: #EFF7F5;
 }
 
 code {
@@ -16,13 +16,13 @@ code {
 .App {
   max-width: 1180px;
   margin: 0 auto;
-  color: #fff;
+  color: #70817E;
 }
 
 a {
-  color: #fff;
+  color: #eff7f5;
   text-decoration: none;
 }
 .secondary-text{
-color: rgb(80, 82, 84);
+color: #eff7f5;
 }
